fix: remove z-index

--- a/018-background slider/style.css
+++ b/018-background slider/style.css
@@ -26,7 +26,6 @@ body::before {
   width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: -1;
 }
 
 .slider-container {
